# ai_design_reviewer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/development/: agentic-development-procedure.md  checkpoint-template.md
docs/superpowers/checkpoints/: 2026-04-29-mechanical-dfm-reviewer-mvp-checkpoint.md
docs/superpowers/plans/: 2026-04-29-mechanical-dfm-reviewer-mvp.md  2026-05-01-mechanical-dfm-reviewer-phase-1.md
docs/superpowers/specs/: 2026-04-29-mechanical-dfm-reviewer-design.md
review_packs/iecex/: ex_d.yaml  ex_e.yaml  ex_i.yaml  ex_m.yaml  simple_apparatus.yaml
review_packs/manufacturing/: cable_electromechanical.yaml  cast_moulded_encapsulated.yaml  fabricated_welded.yaml  machined.yaml  manual_assembly.yaml
src/dfm_reviewer/: __init__.py  ai.py  cli.py  models.py  pdf_processing.py  reporting.py  review_packs.py  storage.py  watcher.py  web.py
tests/: conftest.py  test_ai.py  test_cli.py  test_models.py  test_package.py  test_pdf_processing.py  test_reporting.py  test_review_packs.py  test_storage.py  test_watcher.py
